capDL-tool: add OK files to .gitignore
These files are automatically generated as part of the tests and should
not be tracked by version control. This also updates the 'make
testclean' command to remove them.

Signed-off-by: Corey Lewis <corey.lewis@proofcraft.systems>

--- a/capDL-tool/Makefile
+++ b/capDL-tool/Makefile
@@ -64,4 +64,4 @@ clean:
 
 .PHONY: testclean
 testclean:
-	rm -f *.parse *.parse.x *.dot *.xml *.thy *.png *.out
+	rm -f *.parse *.parse.x *.dot *.xml *.thy *.png *.out *-OK
