--- a/capDL-tool/capDL-tool.cabal
+++ b/capDL-tool/capDL-tool.cabal
@@ -18,7 +18,7 @@ category:            Development
 build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.18
-tested-with:         GHC == 8.4.4
+tested-with:         GHC == 8.4.4, GHC == 8.6.5
 
 executable parse-capDL
   main-is:             Main.hs
@@ -32,8 +32,8 @@ executable parse-capDL
   build-depends:
                        -- Included libraries
                        array >=0.5 && <0.6,
-                       base >= 4.11 && <4.12,
-                       containers >=0.5 && <0.6,
+                       base >= 4.11 && <4.13,
+                       containers >=0.5 && <0.7,
                        filepath >=1.4 && <1.5,
                        mtl >=2.2 && <2.3,
                        parsec >=3.1 && <3.2,
