--- a/capDL-tool/capDL-tool.cabal
+++ b/capDL-tool/capDL-tool.cabal
@@ -18,7 +18,7 @@ category:            Development
 build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.18
-tested-with:         GHC == 8.8.4
+tested-with:         GHC == 8.8.4, GHC == 9.0.2
 
 executable parse-capDL
   main-is:             Main.hs
@@ -32,7 +32,7 @@ executable parse-capDL
   build-depends:
                        -- Included libraries
                        array >=0.5 && <0.6,
-                       base >= 4.13 && <4.14,
+                       base >= 4.13 && <4.16,
                        containers >=0.6 && <0.7,
                        filepath >=1.4 && <1.5,
                        mtl >=2.2 && <2.3,
@@ -42,7 +42,7 @@ executable parse-capDL
                        -- Other libraries
                        base-compat >= 0.11 && <0.12,
                        lens >= 4.15,
-                       MissingH >=1.4 && <1.5,
+                       MissingH >=1.4 && <1.6,
                        pretty >=1.1 && <1.2,
                        regex-compat >= 0.90,
                        split >=0.2 && <0.3,
