--- a/python-capdl-tool/requirements.txt
+++ b/python-capdl-tool/requirements.txt
@@ -1,14 +1,14 @@
-#!/usr/bin/env python
+#!/usr/bin/env python3
 #
 # Copyright 2020, Data61, CSIRO (ABN 41 687 119 230)
 #
 # SPDX-License-Identifier: BSD-2-Clause
 #
 aenum
-orderedset
+ordered-set
 pyelftools
 six
 sortedcontainers
 concurrencytest
 hypothesis
-nose
+future
