capdl-loader-app: Introduce custom error checks
Instead of ZF_LOG* framework functions, we introduce our own layering of
functions that directly output to seL4_DebugPutChar() when the debug
syscall is present and outputs nothing when it isn't. This
implementation allows using a minimal amount of the muslc stdio
implementation for string formatting and bypasses the need for malloc or
any syscalls to be supported.

This will make it easier to refactor capdl-loader-app to be more
freestanding (minimal runtime dependencies) in upcoming commits.

Signed-off-by: Kent McLeod <kent@kry10.com>

--- a/capdl-loader-app/CMakeLists.txt
+++ b/capdl-loader-app/CMakeLists.txt
@@ -95,10 +95,13 @@ add_config_library(capdl_loader_app "${configure_string}")
 # Later on the user will construct a rule for actually generating the capdl executable from a
 # different project directory
 add_custom_target(capdl_app_properties)
-set_property(TARGET capdl_app_properties PROPERTY C_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/main.c")
+get_target_property(MUSL_SOURCE_DIR muslc_gen SOURCE_DIR)
+set_property(TARGET capdl_app_properties PROPERTY C_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/main.c" "${CMAKE_CURRENT_SOURCE_DIR}/src/check.c")
 set_property(
     TARGET capdl_app_properties
     PROPERTY INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/include"
+    "${MUSL_SOURCE_DIR}/src/internal"
+    "${MUSL_SOURCE_DIR}/arch/aarch64"
 )
 
 RequireFile(CAPDL_LOADER_BUILD_HELPERS helpers.cmake)
