--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ '3.x' ]
+        python-version: [ '3.9', '3.x' ]
       fail-fast: false
     steps:
     - uses: actions/checkout@v4
@@ -55,7 +55,7 @@ jobs:
     - run: |
         sudo apt-get update
         sudo apt-get install libxml2-utils
-    - uses: actions/setup-haskell@v1.1.4
+    - uses: haskell/actions/setup@v2
       with:
         enable-stack: true
         stack-setup-ghc: true
