.github: remove haskellstack.org from link check
Seems to be failing some kind of robot check.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -23,3 +23,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: seL4/ci-actions/link-check@master
+        with:
+          # produces 403 for link checkers now:
+          exclude_urls: ".*haskellstack.org.*"
