github: switch to maintained haskell-actions/setup
The haskell/actions/setup action has been discontinued and replaced by
haskell-actions/setup.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,7 @@ jobs:
     - run: |
         sudo apt-get update
         sudo apt-get install libxml2-utils
-    - uses: haskell/actions/setup@v2
+    - uses: haskell-actions/setup@v2
       with:
         enable-stack: true
         stack-setup-ghc: true
