github: specify ghc and cabal version
This duplicates info from under `capDL-tool`, but it seems the
haskell/setup action can't be persuaded to not immediately install
something (`stack-no-global` had no effect).

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,6 +59,7 @@ jobs:
       with:
         enable-stack: true
         stack-setup-ghc: true
+        ghc-version: 9.2.8
     - name: Build and test
       run: |
         cd capDL-tool
